实现全链路身份传播与 Feign 令牌中继。
网关：重构 AuthGlobalFilter，强制将 URL 中的 Token 转换为 Authorization 请求头，并注入 X-User-Id。
公共模块：升级 UserContext 和拦截器，支持通过 ThreadLocal 存储和传递 Token。
消费者：实现 FeignTokenInterceptor，解决下游调用时的 Token 中继问题。
提供者：在 Controller 日志中验证了 Token 和 UserID 的接收情况。
修复：解决了 Feign 调用过程中 Authorization 头丢失的问题。

--- a/开发文档/网关升级蓝图.md
+++ b/开发文档/网关升级蓝图.md
@@ -1,85 +1,117 @@
 
+---
 
-### 🛠️ 一、 后端内核扩展：从“能用”到“抗造”
+### 📊 一、 当前进度状态 (Status Report)
 
-目前的 Demo 只是打通了管道，生产级网关需要给管道加厚、加监控、加各种阀门。
+*   [x] **基础架构**：Nacos + Gateway + Provider + Consumer (三层架构稳固)
+*   [x] **通信闭环**：ThreadLocal + Feign 拦截器实现 Token/UserID 全链路透传 (核心难点已攻克)
+*   [x] **流量治理**：Sentinel 限流熔断 + 规则持久化进 Nacos (高可用保障)
+*   [x] **动态路由**：基于 Nacos 监听器 (`DynamicRouteLoader`) 实现路由热更新 (灵活性保障)
+*   [x] **可观测性**：SkyWalking 链路追踪 (上帝视角)
 
-#### 1. 动态路由架构 (Dynamic Routing)
+**当前系统评级**：⭐⭐⭐⭐ (后端架构已成型，缺文档和可视化管理)
 
-- **现状**：路由写在 application.yml 里，改个转发路径要重启网关。
-- **目标**：**零停机改配置**。
-- **做法**：把路由规则从 YAML 移到 **Nacos 配置中心** 或 **数据库**。编写监听器，一旦 Nacos 配置变动，网关自动刷新路由映射表。
-- **价值**：线上故障时，可以秒切流量，无需发版。
+---
 
-#### 2. 安全体系升级 (Security++)
+### 🗺️ 二、 优化后的升级路线图 (Roadmap 3.0)
 
-- **现状**：简单的 GlobalFilter 检查 Token 有无。
-- **目标**：**银行级的安保**。
-- **做法**：
-  - **接入 OAuth2 / OIDC**：实现统一认证中心（SSO）。
-  - **接口签名校验**：防止参数被篡改（防中间人攻击）。
-  - **防重放攻击**：利用 Redis 记录请求 ID，防止同一个请求包被黑客拦截后重复发送。
-  - **CORS 统一处理**：完美解决前后端分离的跨域问题。
+这一版路线图的核心逻辑是：**先把后端“装修”好（文档、Redis），为前端“控制台”的开发铺平道路。**
 
-#### 3. 可观测性 (Observability) —— 这一步最显专业
+#### 🥇 第一优先级：API 文档聚合 (Knife4j) —— *立刻做*
+*   **理由**：你现在有网关、消费者、提供者，接口分散。如果不聚合文档，写前端控制台或者给别人用时，调试会非常痛苦。
+*   **动作**：
+    1.  微服务接入 Swagger/OpenAPI。
+    2.  网关层通过 Knife4j 聚合所有服务的文档。
+    3.  **效果**：访问网关 `/doc.html`，直接调试所有微服务接口。
 
-- **现状**：报错了只能去 IDEA 控制台翻滚动的日志，流量大了根本看不清。
-- **目标**：**上帝视角**。
-- **做法**：
-  - **全链路追踪 (SkyWalking / Zipkin)**：给每个请求打上 TraceID。你可以看到一个请求从网关进来，经过了哪些服务，在哪里耗时最长，哪里报错了。
-  - **日志聚合 (ELK / Loki)**：把分散的日志收集到一个网页里查询。
-  - **监控大盘 (Prometheus + Grafana)**：监控 JVM 内存、CPU、实时 QPS、响应延迟。
+#### 🥈 第二优先级：Redis 基础设施回归 —— *为高级功能铺路*
+*   **理由**：之前的计划里注释掉了 Redis，但接下来的“防重放”、“缓存”、“Dashboard 监控统计”都强依赖 Redis。
+*   **动作**：
+    1.  重新启用 Redis 配置。
+    2.  封装 RedisUtils 工具类。
 
-#### 4. 性能与高可用 (Performance)
+#### 🥉 第三优先级：可视化管理平台 (Frontend Dashboard) —— *简历大杀器*
+*   **理由**：纯后端的项目在面试展示时很吃亏。有一个界面能动态点点点，冲击力完全不同。
+*   **动作**：
+    1.  初始化 Vue3 + Element Plus 项目。
+    2.  **CORS 跨域配置** (前端调网关必做)。
+    3.  对接 Nacos API 做动态路由管理界面。
 
-- **现状**：默认配置，Tomcat/Netty 线程池未调优。
-- **目标**：**高吞吐、低延迟**。
-- **做法**：
-  - **响应缓存 (Redis)**：对于不经常变的数据（如菜单、字典），网关层直接查 Redis 返回，不请求后端，速度提升 10 倍。
-  - **Netty 参数调优**：调整 Reactor 线程数和连接池，压榨机器性能。
-  - **灰度发布 (Canary Release)**：让 10% 的用户走新版本服务，90% 走旧版本，根据 Header 或 IP 自动分流。
+#### 🏅 第四优先级：高级安全 (Security Pro)
+*   **理由**：查漏补缺，提升安全等级。
+*   **动作**：
+    1.  **接口签名** (防篡改)。
+    2.  **防重放攻击** (基于 Redis)。
 
-#### 5. API 文档聚合 (Swagger/Knife4j)
+---
 
-- **现状**：每个服务有自己的文档，前端看文档要打开 10 个网页。
-- **目标**：**统一入口**。
-- **做法**：在网关层聚合所有微服务的 Swagger 文档，前端只需要访问网关的文档地址，就能看到所有接口。
+### 👉 三、 下一步做什么？ (Next Step)
 
-------
+**目标**：完成 **API 文档聚合 (Knife4j)**。
 
+这将极大提升你的开发体验。做完这个，你就可以像看“说明书”一样查看你的微服务群。
 
+#### 🛠️ 实战指导：集成 Knife4j
 
-### 💻 二、 前端可视化：打造“炫酷控制台”
+**1. 给微服务 (Provider & Consumer) 添加“身份证”**
 
-**完全可以！而且非常有必要。**
-现在的 Sentinel Dashboard 比较丑且功能单一，Nacos 只能看配置。你可以开发一个 **“统一网关管理平台” (Admin Dashboard)**。
+在 `service-provider` 和 `service-consumer` 的 `pom.xml` 中引入：
 
-**前端推荐技术栈**：Vue 3 (或 React) + Ant Design Pro / Element Plus + **ECharts (可视化图表)**。
+```xml
+<!-- Spring Boot 3.x 专用 Knife4j 依赖 -->
+<dependency>
+    <groupId>com.github.xiaoymin</groupId>
+    <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+    <version>4.3.0</version>
+</dependency>
+```
 
-**这个控制面板可以实现什么功能？**
+**2. 给网关 (Gateway) 添加“聚合器”**
 
-1. **流量驾驶舱 (Dashboard)**：
-   - **大屏展示**：用 ECharts 画出实时的 QPS 曲线图、饼图（请求来源分布）、地图（访问IP分布）。
-   - **健康状态**：类似红绿灯，显示各个微服务的死活状态。
-2. **动态路由管理**：
-   - 做一个表格界面，让你在网页上**增删改查**路由规则。
-   - 点击“保存”时，前端调用网关接口（或写入 Nacos），网关自动生效。再也不用去改 YAML 文件了。
-3. **限流/熔断配置**：
-   - 把 Sentinel 的规则配置集成进来，在一个页面上通过滑块或输入框调整限流阈值。
-4. **访问日志审计**：
-   - 展示谁（哪个 UserID）、什么时间、访问了哪个接口、耗时多少、是不是 200 OK。
+网关自己不需要生成文档，它只需要把别人的文档“聚”过来。但因为 Gateway 是 WebFlux，依赖不一样。
 
-------
+在 `api-gateway` 的 `pom.xml` 中引入：
 
+```xml
+<dependency>
+    <groupId>com.github.xiaoymin</groupId>
+    <artifactId>knife4j-gateway-spring-boot-starter</artifactId>
+    <version>4.3.0</version>
+</dependency>
+```
 
+**3. 配置网关聚合规则 (application.yml)**
 
-### 🗺️ 总结与建议路线
+在 `api-gateway` 的配置文件中，告诉 Knife4j 去哪里找文档：
 
-如果要做到“个人使用且抗压”，我建议的**升级优先级**如下：
+```yaml
+knife4j:
+  enable: true
+  gateway:
+    enabled: true
+    # 聚合策略：手动配置 (最稳)
+    strategy: manual
+    routes:
+      - name: 用户服务 (Consumer)
+        # 这里的 /v3/api-docs 是 SpringBoot 3 默认的文档路径
+        # service-name 必须和 Nacos 里的服务名一致
+        url: /service-consumer/v3/api-docs 
+        service-name: service-consumer
+        context-path: /service-consumer
+        order: 2
+      - name: 提供者服务 (Provider)
+        url: /service-provider/v3/api-docs
+        service-name: service-provider
+        context-path: /service-provider
+        order: 3
+```
 
-1. **第一阶段（数据驱动）**：实现 **动态路由**（Nacos监听），这是网关灵活性的基石。
-2. **第二阶段（看得见）**：集成 **SkyWalking** 或简单的链路追踪，加上日志记录到数据库/文件。
-3. **第三阶段（可管理）**：写一个简单的 **Vue 前端**，配合后端接口，实现路由的可视化配置和简单的流量图表。
-4. **第四阶段（性能怪兽）**：引入 Redis 缓存和 OAuth2 安全认证。
+**4. 验证**
 
-你现在手里的 Demo 是一块很好的地基，接下来就像是在这块地基上盖房子（功能）和装修（前端），非常好玩且能学到很多架构知识！准备好开始了吗？
+1.  启动 Nacos, Gateway, Consumer, Provider。
+2.  访问网关地址：`http://localhost:9000/doc.html`。
+3.  你应该能看到一个漂亮的蓝色界面，左上角下拉框可以选择“用户服务”或“提供者服务”，并且可以直接发送请求测试！
+
+---
+
+**怎么样？准备好给你的系统加上“说明书”了吗？如果有报错（Knife4j 在 Spring Boot 3 上偶尔有坑），随时发给我！**
