feat: 初始化网关可视化控制台，实现路由列表展示
1. 前端架构：初始化 Vue 3 + Vite + Element Plus 项目脚手架。
2. 功能实现：完成路由管理页面的基础开发，实现从后端拉取并展示 Nacos 路由列表。
3. 网关后端：新增 CorsConfig 配置类，解决前后端分离跨域问题。
4. 网关后端：集成 Actuator 并暴露监控端点，为仪表盘开发做准备。
5. 联调验证：打通 前端 -> 网关 -> Nacos 的数据读取链路。

--- a/开发文档/网关升级蓝图.md
+++ b/开发文档/网关升级蓝图.md
@@ -3,115 +3,74 @@
 
 ### 📊 一、 当前进度状态 (Status Report)
 
-*   [x] **基础架构**：Nacos + Gateway + Provider + Consumer (三层架构稳固)
+**后端核心 (Backend Core)**
+*   [x] **基础架构**：Nacos + Gateway + Provider + Consumer (已完成)
 *   [x] **通信闭环**：ThreadLocal + Feign 拦截器实现 Token/UserID 全链路透传 (核心难点已攻克)
-*   [x] **流量治理**：Sentinel 限流熔断 + 规则持久化进 Nacos (高可用保障)
-*   [x] **动态路由**：基于 Nacos 监听器 (`DynamicRouteLoader`) 实现路由热更新 (灵活性保障)
-*   [x] **可观测性**：SkyWalking 链路追踪 (上帝视角)
+*   [x] **流量治理**：Sentinel 限流熔断 + 规则持久化 (已完成)
+*   [x] **动态路由**：基于 Nacos 监听器实现路由热更新 (已完成)
+*   [x] **可观测性**：SkyWalking 链路追踪 (已完成)
+*   [x] **API 文档**：Knife4j 聚合文档 (已完成)
+*   [x] **管理接口**：RouteController 实现对 Nacos 配置的读写 (已完成)
 
-**当前系统评级**：⭐⭐⭐⭐ (后端架构已成型，缺文档和可视化管理)
+**前端可视化 (Frontend Visualization)**
+*   [x] **环境搭建**：Vue 3 + Vite + Element Plus (已完成)
+*   [x] **跨域打通**：后端 CORS 配置生效 (已完成)
+*   [x] **路由列表**：实现路由数据的**“查” (Read)** (已完成，见截图)
+*   [ ] **路由操作**：实现路由的**“增、删、改” (Write)** (待开发)
+*   [ ] **仪表盘**：集成 ECharts 展示 QPS 和健康状态 (待开发)
+
+**当前系统评级**：⭐⭐⭐⭐⭐ (后端大成，前端初具雏形，全栈闭环已打通)
 
 ---
 
-### 🗺️ 二、 优化后的升级路线图 (Roadmap 3.0)
+### 🗺️ 二、 优化后的升级路线图 (Roadmap 5.0)
 
-这一版路线图的核心逻辑是：**先把后端“装修”好（文档、Redis），为前端“控制台”的开发铺平道路。**
+接下来的重点非常清晰：**把前端页面上的“假按钮”变成“真功能”**，然后回过头来做 Redis 增强。
 
-#### 🥇 第一优先级：API 文档聚合 (Knife4j) —— *立刻做*
-*   **理由**：你现在有网关、消费者、提供者，接口分散。如果不聚合文档，写前端控制台或者给别人用时，调试会非常痛苦。
+#### 🥇 第一优先级：前端控制台功能补全 (Dashboard Functionality)
+*   **目标**：让截图里的“新增路由”、“编辑”、“删除”按钮能用。
 *   **动作**：
-    1.  微服务接入 Swagger/OpenAPI。
-    2.  网关层通过 Knife4j 聚合所有服务的文档。
-    3.  **效果**：访问网关 `/doc.html`，直接调试所有微服务接口。
+    1.  **实现删除**：点击表格行的“删除”，调用后端 `DELETE /admin/routes/{id}`。
+    2.  **实现新增**：点击“新增路由”，弹出一个表单模态框 (Dialog)，填写 ID、URI、断言规则，提交给后端 `POST` 接口。
+    3.  **实现编辑**：回显数据并更新。
 
-#### 🥈 第二优先级：Redis 基础设施回归 —— *为高级功能铺路*
-*   **理由**：之前的计划里注释掉了 Redis，但接下来的“防重放”、“缓存”、“Dashboard 监控统计”都强依赖 Redis。
+#### 🥈 第二优先级：流量驾驶舱 (Metrics Dashboard)
+*   **目标**：在首页展示图表，而不是冷冰冰的表格。
 *   **动作**：
-    1.  重新启用 Redis 配置。
-    2.  封装 RedisUtils 工具类。
+    1.  引入 **ECharts**。
+    2.  调用后端 `/actuator` 接口。
+    3.  画出两个图：**JVM 内存水位图** (仪表盘) 和 **QPS 趋势图** (折线图)。
 
-#### 🥉 第三优先级：可视化管理平台 (Frontend Dashboard) —— *简历大杀器*
-*   **理由**：纯后端的项目在面试展示时很吃亏。有一个界面能动态点点点，冲击力完全不同。
+#### 🥉 第三优先级：Redis 基础设施回归 (Advanced Backend)
+*   **目标**：引入 Redis 做防重放和缓存。
 *   **动作**：
-    1.  初始化 Vue3 + Element Plus 项目。
-    2.  **CORS 跨域配置** (前端调网关必做)。
-    3.  对接 Nacos API 做动态路由管理界面。
-
-#### 🏅 第四优先级：高级安全 (Security Pro)
-*   **理由**：查漏补缺，提升安全等级。
-*   **动作**：
-    1.  **接口签名** (防篡改)。
-    2.  **防重放攻击** (基于 Redis)。
+    1.  启用 Redis，封装工具类。
+    2.  实现防重放拦截器。
 
 ---
 
 ### 👉 三、 下一步做什么？ (Next Step)
 
-**目标**：完成 **API 文档聚合 (Knife4j)**。
+**下次开工的任务非常明确：让截图里的按钮“活”过来。**
 
-这将极大提升你的开发体验。做完这个，你就可以像看“说明书”一样查看你的微服务群。
-
-#### 🛠️ 实战指导：集成 Knife4j
-
-**1. 给微服务 (Provider & Consumer) 添加“身份证”**
-
-在 `service-provider` 和 `service-consumer` 的 `pom.xml` 中引入：
-
-```xml
-<!-- Spring Boot 3.x 专用 Knife4j 依赖 -->
-<dependency>
-    <groupId>com.github.xiaoymin</groupId>
-    <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
-    <version>4.3.0</version>
-</dependency>
-```
-
-**2. 给网关 (Gateway) 添加“聚合器”**
-
-网关自己不需要生成文档，它只需要把别人的文档“聚”过来。但因为 Gateway 是 WebFlux，依赖不一样。
-
-在 `api-gateway` 的 `pom.xml` 中引入：
-
-```xml
-<dependency>
-    <groupId>com.github.xiaoymin</groupId>
-    <artifactId>knife4j-gateway-spring-boot-starter</artifactId>
-    <version>4.3.0</version>
-</dependency>
-```
-
-**3. 配置网关聚合规则 (application.yml)**
-
-在 `api-gateway` 的配置文件中，告诉 Knife4j 去哪里找文档：
-
-```yaml
-knife4j:
-  enable: true
-  gateway:
-    enabled: true
-    # 聚合策略：手动配置 (最稳)
-    strategy: manual
-    routes:
-      - name: 用户服务 (Consumer)
-        # 这里的 /v3/api-docs 是 SpringBoot 3 默认的文档路径
-        # service-name 必须和 Nacos 里的服务名一致
-        url: /service-consumer/v3/api-docs 
-        service-name: service-consumer
-        context-path: /service-consumer
-        order: 2
-      - name: 提供者服务 (Provider)
-        url: /service-provider/v3/api-docs
-        service-name: service-provider
-        context-path: /service-provider
-        order: 3
-```
-
-**4. 验证**
-
-1.  启动 Nacos, Gateway, Consumer, Provider。
-2.  访问网关地址：`http://localhost:9000/doc.html`。
-3.  你应该能看到一个漂亮的蓝色界面，左上角下拉框可以选择“用户服务”或“提供者服务”，并且可以直接发送请求测试！
+1.  **实现“删除路由”功能**：
+    *   给“删除”按钮绑定点击事件。
+    *   调用 `axios.delete`。
+    *   删除成功后自动刷新表格。
+2.  **实现“新增路由”弹窗**：
+    *   使用 Element Plus 的 `el-dialog` 和 `el-form` 组件。
+    *   手动填写 JSON 太容易错，我们要给用户提供输入框。
 
 ---
 
-**怎么样？准备好给你的系统加上“说明书”了吗？如果有报错（Knife4j 在 Spring Boot 3 上偶尔有坑），随时发给我！**
+### 🧠 今日复盘 (Digestion)
+
+你在休息时，可以回想一下今天打通的这条“超级链路”：
+
+1.  **浏览器** (Vue) 发起 `GET` 请求。
+2.  **网关** (9000端口) 收到请求，**CORS 过滤器** 允许跨域。
+3.  **RouteController** 接收请求，去 **Nacos** 拉取 JSON 配置。
+4.  **Nacos** 返回配置 -> **Controller** 转成 List -> **前端** 拿到数据。
+5.  **Vue** 拿到数据 -> **v-for** 渲染出你看到的表格。
+
+好好休息，今天的成果非常棒！下次见！👋
