fix: 修复 Knife4j 文档聚合 404 问题，统一路由前缀策略
1. Nacos路由：重构路由规则，统一采用 StripPrefix=1 策略（网关负责去前缀）。
2. 后端服务：移除 Controller 类上的 @RequestMapping 前缀，遵循网关统一转发规范。
3. 验证：全链路打通 Doc UI -> Gateway -> Nacos Route -> Backend Service 的文档获取流程。

--- a/开发文档/网关升级蓝图.md
+++ b/开发文档/网关升级蓝图.md
@@ -15,7 +15,7 @@
 **前端可视化 (Frontend Visualization)**
 *   [x] **环境搭建**：Vue 3 + Vite + Element Plus (已完成)
 *   [x] **跨域打通**：后端 CORS 配置生效 (已完成)
-*   [x] **路由列表**：实现路由数据的**“查” (Read)** (已完成，见截图)
+*   [x] **路由列表**：实现路由数据的“查” (Read) (已完成，见截图)
 *   [ ] **路由操作**：实现路由的**“增、删、改” (Write)** (待开发)
 *   [ ] **仪表盘**：集成 ECharts 展示 QPS 和健康状态 (待开发)
 
