feat: 实现 Redis 防重放安全机制，更新系统架构文档
1. 安全增强：新增 ReplayAttackFilter 过滤器，基于 Redis (Nonce) + Timestamp 双重校验机制，有效拦截重放攻击。
2. 基础设施：集成 Reactive Redis，封装 RedisUtil 工具类支持异步操作，并完善了过滤器的白名单策略（放行 Swagger/监控端点）。
3. 文档更新：重构 README.md，新增 Meramid 架构图与核心流程图（身份透传、防重放、文档聚合），完善功能特性列表。
4. 验证：通过 Postman 验证防重放逻辑（时间窗过期拦截、Nonce 重复拦截）均生效。

--- a/开发笔记/全链路请求时序.md
+++ b/开发笔记/全链路请求时序.md
@@ -86,33 +86,101 @@ sequenceDiagram
 
 ---
 
-### ❓ 灵魂三问：为什么要这么麻烦？
+### 🗺️ 全链路核心流程图 (上帝视角)
 
-#### 1. 为什么 Provider 也要注册 `WebMvcConfig` 和 `UserInfoInterceptor`？
-*   **因为代码不注册就不干活**。
-*   你虽然在 `common` 包里写了 `UserInfoInterceptor` 类，但那只是一个普通的 Java 类。
-*   Provider 是一个独立的 Spring Boot 应用。你必须告诉 Spring MVC：“嘿，有人发请求来的时候，记得先让这个拦截器处理一下！”
-*   如果没有 `WebMvcConfig`，Header 里的 Token 传到了 Provider 门口，但没人把它取出来放到 `UserContext` 里，你的 Controller 里面调用 `UserContext.getUserId()` 就会得到 `null`。
+`用户请求` -> `Nginx(可选)` -> **`Gateway (网关)`** -> `微服务 (Consumer)` -> `微服务 (Provider)`
 
-#### 2. 为什么 Consumer 也要注册拦截器？
-*   **为了给 Feign 供弹药**。
-*   Feign 发起调用时，需要把 Token 塞进去。Token 从哪来？从 `ThreadLocal` 来。`ThreadLocal` 的 Token 从哪来？就是 Consumer 刚收到网关请求时，通过拦截器从 Header 里取下来存进去的。
-*   如果你 Consumer 不注册拦截器，`UserContext` 就是空的，Feign 也就拿不到 Token 去转发了。
-
-#### 3. 为什么要有 `FeignTokenInterceptor`？
-*   **因为 Feign 很“健忘”**。
-*   Consumer 接到网关的请求（Request A），和 Consumer 发给 Provider 的请求（Request B），是**两个完全独立的 HTTP 请求**。
-*   Spring **不会自动**把 Request A 的 Header 复制给 Request B。
-*   所以我们需要这个拦截器，手动把 Token 从 A 搬运到 B。
+我们重点把 **Gateway** 内部放大 100 倍来看。
 
 ---
 
-### 🏆 总结
+### 🚀 第一阶段：进入网关 (Reception)
 
-这套架构被称为：**基于 ThreadLocal 的全链路上下文透传**。
+**1. 请求到达 (Netty Server)**
+*   用户发起请求 `GET /consumer/test`。
+*   请求首先打到网关的 **Netty Server**（因为 Gateway 是基于 Reactor Netty 的）。
+*   Netty 把底层的 TCP 数据包封装成一个 Java 对象：**`ServerWebExchange`**（你可以把它理解为升级版的 HttpServletRequest）。
 
-*   **Gateway**：负责**造** Header（标准化 Token 和 ID）。
-*   **Interceptor (MVC)**：负责**读** Header -> 存 ThreadLocal（给当前服务用）。
-*   **Interceptor (Feign)**：负责读 ThreadLocal -> **写** Header（给下游服务用）。
+**2. 路由匹配 (Route Predicate Handler Mapping)**
+*   网关拿着这个 `exchange`，去问它的“路由中心”：**“这货该去哪？”**
+*   **细节**：它会遍历内存里的路由表（就是你通过 Nacos 动态加载进去的那些 `RouteDefinition`）。
+*   **匹配逻辑**：
+    *   检查 `route_to_consumer` -> 断言 `Path=/consumer/**` -> **匹配成功！**
+*   **结果**：网关给这个请求贴了个条子：“目标是 `lb://service-consumer`”。
 
-**现在，你的系统已经具备了像大厂一样的微服务安全通信基座！** 接下来你可以放心地在 Provider 里写业务，直接用 `UserContext.getUserId()` 拿用户 ID，完全不用操心它是怎么传过来的了。
+---
+
+### 🛡️ 第二阶段：过滤器链 (Filter Chain) —— 过五关斩六将
+
+现在，请求要穿过一排排的“安检机”（过滤器）。
+
+**3. 防重放 (ReplayAttackFilter)**
+*   **动作**：检查 Header 里的 `Nonce` 和 `Timestamp`。
+*   **细节**：去 Redis 查 `exists(nonce)`。
+*   **结果**：如果存在 -> 403 踢回；不存在 -> 存入 Redis -> 放行。
+
+**4. 全局鉴权 (AuthGlobalFilter)**
+*   **动作**：检查 Header 里的 `Authorization`。
+*   **细节**：解析 JWT，拿到 `userId=888`。
+*   **关键动作**：`request.mutate().header("X-User-Id", "888")`。**（给请求塞进去了新 Header）**。
+
+**5. 流量哨兵 (SentinelGatewayFilter)**
+*   **动作**：检查 QPS。
+*   **细节**：
+    *   根据路由 ID `route_to_consumer` 去查规则。
+    *   **令牌桶算法**：桶里还有令牌吗？
+    *   **有** -> 拿走一个，放行。
+    *   **没有** -> 抛出 `FlowException` -> 被你的 `GatewayConfiguration` 捕获 -> 返回 JSON。
+
+---
+
+### 🔄 第三阶段：转发与负载均衡 (Forwarding)
+
+**6. 负载均衡 (LoadBalancerClientFilter)**
+*   **现状**：请求的目标是 `lb://service-consumer`。网关不知道这是哪个 IP。
+*   **动作**：网关去问 **Nacos**（或者查本地缓存的 Nacos 列表）。
+*   **细节**：
+    *   拿到列表：`[192.168.0.1:8081, 192.168.0.2:8082]`。
+    *   **算法**：执行**轮询算法 (Round Robin)**。
+    *   **决定**：这次选 **8081**。
+*   **结果**：请求的目标地址变成了真实 IP：`http://192.168.0.1:8081/consumer/test`。
+
+**7. 真正转发 (NettyRoutingFilter)**
+*   **动作**：这是网关的最后一个过滤器。它使用 **Netty Client** 真正向 8081 发起了 HTTP 请求。
+*   **注意**：此时网关线程**不会阻塞**（不会傻等），它挂起当前任务，去处理别的请求了。
+
+---
+
+### 🏭 第四阶段：微服务内部 (Service Mesh)
+
+**8. Consumer 接收**
+*   Consumer (8081) 收到请求。
+*   **UserInfoInterceptor** 拦截 -> 把 `X-User-Id` 存入 **ThreadLocal**。
+
+**9. Feign 调用 Provider**
+*   Consumer 代码执行到 `providerClient.hello()`。
+*   **FeignTokenInterceptor** 触发 -> 从 **ThreadLocal** 取出 Token -> 塞入新请求 Header。
+*   Feign 像浏览器一样，向 Provider 发起请求。
+
+**10. Provider 响应**
+*   Provider 收到 Token -> 校验通过 -> 执行业务 -> 返回结果。
+
+---
+
+### 🏁 第五阶段：原路返回
+
+*   Provider 的结果 -> Consumer。
+*   Consumer 的结果 -> Gateway (NettyRoutingFilter 收到回调)。
+*   Gateway -> 用户。
+
+---
+
+### 🧠 核心知识点总结
+
+1.  **路由**：靠 **Predicate (断言)** 匹配，数据源来自 **Nacos**。
+2.  **负载均衡**：靠 **LoadBalancerFilter**，把 `lb://` 替换成真实 IP，默认**轮询**。
+3.  **限流**：靠 **SentinelFilter**，基于**滑动窗口/令牌桶**算法，超标就抛异常。
+4.  **鉴权/透传**：靠我们自己写的 **Filter + ThreadLocal**，像接力棒一样传递 UserID。
+5.  **高性能**：全流程基于 **Netty 异步非阻塞**，线程利用率极高。
+
+**这就是网关系统的“心脏跳动”过程！**
