feat(dashboard): 完成流量驾驶舱全链路监控与运维管控功能
1. 后端核心
- 实现网关全局流量埋点：基于 Redis 统计实时 QPS、平均延迟与错误率
- 集成 SkyWalking：通过 GraphQL 查询服务拓扑，实现后端数据代理
- 新增运维控制接口：支持路由刷新(Refresh)、黑名单WAF、日志采样(Sample)与缓存清理
- 实现拦截日志采集：统一捕获鉴权失败与 Sentinel 限流熔断事件，异步写入 Redis List

2. 前端可视化
- 重构驾驶舱 UI：采用赛博朋克风格，集成 ECharts 迷你波形图与环形图
- 实现动态拓扑图：基于 ECharts Graph 展示微服务调用关系与节点状态
- 新增实时看板：Top 路由排行、拦截日志滚动终端
- 交互优化：运维按钮对接真实接口，支持一键开关防火墙与路由热更新

--- a/开发笔记/流量驾驶舱设计.md
+++ b/开发笔记/流量驾驶舱设计.md
@@ -1,65 +1,167 @@
 
-### 🎨 设计理念：Micro-Gateway Cockpit (微网关驾驶舱)
+### 🚀 核心设计理念：观测 (Observe) -> 洞察 (Insight) -> 管控 (Control)
 
-我们要打造的不仅仅是一个后台管理，而是一个**实时监控中心**。
-
-**核心布局结构 (Layout)：**
-*   **导航栏 (Sidebar)**：功能导航（仪表盘、路由管理、限流配置、日志审计）。
-*   **主内容区 (Main)**：
-    *   **Dashboard (首页)**：实时动态图表（这是最酷的地方）。
-    *   **Route Manager**：你之前做的那个表格。
+我们将界面分为三个功能区，对应你的左、中、右布局。
 
 ---
 
-### 🖥️ 页面功能规划 (Page Design)
+### 📊 一、 左侧翼：流量透视 (Traffic Insight)
+**定位**：关注“网关本身”的吞吐能力和业务分布。
 
-#### 1. 仪表盘 (Dashboard) —— *核心亮点*
-这是你打开系统的第一眼，必须震撼。我们设计 **4 个核心卡片** + **2 个动态图表**。
+#### 1. 核心指标卡片 (保留并优化)
+现有的 QPS、Latency、Error Rate 是黄金指标，必须保留，但建议增加**“网络吞吐量”**。
 
-*   **顶部 4 卡片 (KPI Cards)**：
-    *   🚀 **实时 QPS**：数字跳动显示 (例如：`1,245 req/s`)。
-    *   ⚡ **平均响应时间 (RT)**：(例如：`15ms`)，颜色根据快慢变绿/红。
-    *   🛡️ **今日拦截攻击**：统计防重放/限流拦截次数 (例如：`42 次`)。
-    *   📦 **在线微服务数**：(例如：`3 个`)。
+| 指标名称 | 数据含义 | 数据来源 | 建议优化 |
+| :--- | :--- | :--- | :--- |
+| **Real-Time QPS** | 每秒请求数 | Redis计数 / Sentinel | 增加“昨日同比”箭头，看流量是否突增。 |
+| **Avg Latency** | 平均响应时间 | SkyWalking / Actuator | 区分 **P95 / P99 延迟**（比平均值更有意义）。 |
+| **Network I/O** | 网络吞吐量 | System Metrics | **新增**。显示入网/出网带宽 (如 `15 MB/s`)，网关最怕带宽打满。 |
+| **Error Rate** | 失败率 | Actuator (`http.server.requests`) | 保持现状，超过 5% 变红报警。 |
 
-*   **中间大图 (Live Charts)**：
-    *   **流量心电图** (Line Chart)：用 ECharts 画出最近 5 分钟的 QPS 波动，像心电图一样实时向左推移刷新。
-    *   **请求分布饼图** (Pie Chart)：展示哪个微服务（Provider/Consumer）被调用的最多。
-
-#### 2. 路由管理 (Route Manager)
-*   **这就是你之前写的那个页面**。我们把它封装成一个组件 `RouteList.vue`，放到路由 `/routes` 下。
-*   **优化**：增加一个“一键同步”按钮，点击后有个旋转动画，模拟从 Nacos 拉取的过程。
-
-#### 3. 流量控制 (Traffic Control) —— *预留*
-*   未来用来展示 Sentinel 的规则列表，并提供开关（一键熔断）。
-
----
-
-### 🛠️ 技术实施路线 (Roadmap)
-
-为了实现这个设计，我们需要分三步走：
-
-#### 第一步：重构前端架构 (Refactor)
-*   **动作**：引入 `vue-router`。
-*   **结构**：
-    *   `App.vue` -> 变成只放 `<router-view>` 的空壳。
-    *   `layout/index.vue` -> 包含侧边栏和顶栏的通用布局。
-    *   `views/dashboard/index.vue` -> 仪表盘页面。
-    *   `views/routes/index.vue` -> 路由管理页面。
-
-#### 第二步：引入 ECharts (Visualization)
-*   **动作**：安装 `echarts` 和 `vue-echarts`。
-*   **实现**：写一个通用的图表组件，对接后端 `/actuator/metrics` 接口。
-
-#### 第三步：后端数据接口适配 (Backend API)
-*   **动作**：后端的 Actuator 虽然有数据，但格式太乱。
-*   **优化**：我们需要在网关写一个 `MonitorController`，把 Actuator 的数据清洗一下，变成前端好用的格式（比如直接返回 QPS 数字）。
+#### 2. TOP 路由排行 (替换原 Scanner Box)
+原来的 `Scanner Box` 显示 CPU/内存略显单薄，建议改为 **TOP 5 热门路由排行**。
+*   **展示内容**：
+    1.  `/order/**` - 1200 QPS
+    2.  `/user/**` - 800 QPS
+    3.  ...
+*   **价值**：一眼看出现在的流量都在请求哪个业务，是不是有人在刷接口。
 
 ---
 
-### 🗣️ 你的决定？
+### 🕸️ 二、 中控区：全链路拓扑 (Link Topology)
+**定位**：上帝视角，看清流量流向。
 
-这个设计方案（**侧边栏布局 + 实时心电图**）你觉得够不够酷？
-如果满意，我们现在的**第一步**就是：**安装 Vue Router，把现在的 App.vue 拆了，搭起 Layout 框架。**
+这是你计划放 SkyWalking 的地方。
 
-准备好动手拆家了吗？🏗️
+#### 1. 展现形式建议
+*   **不建议直接 Iframe 嵌入 SkyWalking 原生界面**：原生界面是白底的，控件多，放进去会破坏你的赛博朋克风格。
+*   **建议方案**：**后端透传数据 + 前端 ECharts/G6 渲染**。
+    *   后端调用 SkyWalking 的 GraphQL 接口查询拓扑数据。
+    *   前端用 ECharts 关系图绘制：
+        *   **中心节点**：Gateway (发光大球)。
+        *   **子节点**：Order-Service, User-Service (卫星球)。
+        *   **连线**：代表流量。**连线变红**代表该链路熔断或高延迟。
+        *   **粒子特效**：在连线上模拟数据包流动（类似你原来的星空，但变成有向流动）。
+
+---
+
+### 🛡️ 三、 右侧翼：防御与治理 (Defense & Governance) [续]
+
+#### 2. 拦截日志终端 (Log Terminal) - 核心价值：知道谁在攻击你
+这部分非常棒，建议数据更详细，做成**滚动显示的实时 WAF/Sentinel 拦截日志**。
+
+*   **数据结构优化**：
+    不要只显示“Block”，要显示“谁、去哪、为什么被拦”。
+    *   **Time**: `10:42:05`
+    *   **Client**: `192.168.x.x` (来源 IP，最好能解析出地理位置，如 "Shanghai")
+    *   **Target**: `/order/create` (目标接口)
+    *   **Reason**: `FlowLimit` (限流) / `Degrade` (熔断) / `Blacklist` (黑名单) / `AuthFail` (鉴权失败)
+
+*   **视觉优化**：
+    *   **流控拦截**用 🟡 **黄色** (Warning)。
+    *   **熔断降级**用 🔴 **红色** (Critical)。
+    *   **鉴权失败**用 🟣 **紫色** (Security)。
+
+---
+
+### 🗺️ 完整的“流量驾驶舱”功能架构设计
+
+为了让这个界面既炫酷又真实可用，我为你规划了以下的完整蓝图。你可以直接按照这个去写后端接口和前端组件。
+
+#### 1. 📊 左侧翼：流量透视 (Traffic Monitor)
+**关注点：网关自身的健康度与负载。**
+
+*   **[模块 A] 核心指标卡片 (Metrics Cards)**
+    *   **QPS (每秒请求数)**:
+        *   *展示*: 实时数值 + 趋势箭头 + 波浪图背景。
+        *   *来源*: Redis 计数器 或 Sentinel API。
+    *   **Avg Latency (平均耗时)**:
+        *   *展示*: P95 数值 (95%的请求都在这个时间内)，比平均值更能反映卡顿。
+        *   *来源*: SkyWalking Metrics 或 Micrometer。
+    *   **Network I/O (网络吞吐)**:
+        *   *展示*: `In: 15MB/s` / `Out: 12MB/s`。
+        *   *来源*: JVM/OS 监控数据。
+    *   **Success Rate (成功率)**:
+        *   *展示*: 99.9%，低于 99% 变红报警。
+        *   *来源*: HTTP 状态码统计。
+
+*   **[模块 B] 热门路由排行 (Top Routes)**
+    *   *功能*: 实时显示当前最繁忙的 5 个微服务/接口。
+    *   *形式*: 进度条列表。
+    *   *数据*: 聚合统计最近 1 分钟的请求量。
+
+#### 2. 🕸️ 中控区：全链路拓扑 (SkyWalking Topology)
+**关注点：流量的流向与服务关系。**
+
+*   **[核心模块] 3D 动态拓扑图**
+    *   **不建议直接嵌入 SkyWalking 原生网页**（风格太割裂，且无法交互）。
+    *   **推荐实现**：
+        1.  **后端**：写一个接口 `/api/topology`，去调用 SkyWalking 的 GraphQL 接口拿到节点和连线数据。
+        2.  **前端**：使用 **ECharts Graph** 或 **G6** 在你的 `visual-engine` 区域绘制。
+    *   **视觉设计**：
+        *   **中心节点**: API Gateway (发光核心)。
+        *   **子节点**: 各个微服务 (Order, User, Product...) 围绕中心旋转。
+        *   **连线**: 动态粒子线条。
+            *   🟢 **绿色流动**: 正常流量。
+            *   🔴 **红色闪烁**: 该链路发生熔断或错误率过高。
+            *   🟡 **黄色变粗**: 该链路正在限流。
+
+#### 3. 🛡️ 右侧翼：控制与审计 (Control & Audit)
+**关注点：异常处理与运维干预。**
+
+*   **[模块 C] 快捷运维矩阵 (Ops Matrix)**
+    *   摒弃“重启”等假大空按钮，换成实用的：
+    *   **🔁 Refresh Routes**: 强制同步 Nacos 路由配置（Nacos 推送偶尔会有延迟，这个是手动兜底）。
+    *   **📛 WAF Toggle**: 一键开启/关闭全局 IP 黑名单模式（应对突发攻击）。
+    *   **🐛 Log Sample**: 开启 60秒 的“全链路日志采样”（排查线上问题神器）。
+    *   **🧹 Clear Cache**: 清除网关本地的 Guava/Caffeine 缓存。
+
+*   **[模块 D] 实时拦截终端 (Interception Log)**
+    *   *功能*: 像黑客帝国的屏幕一样，滚动显示被 Sentinel 或过滤器拦截的请求。
+    *   *意义*: 让运维知道网关正在“干活”，拦住了多少恶意请求或过载请求。
+
+#### 4. ⚓ 底部坞：工具箱 (Dock)
+**关注点：文档与调试。**
+
+*   **API Terminal (Knife4j)**: 保持你现有的弹窗设计，非常好。
+*   **Version Info**: 显示网关版本、启动时间、JDK 版本。
+
+---
+
+### 🔌 后端接口需求清单 (Backend API)
+
+为了让这个界面“活”过来，你需要实现以下接口（建议在 `gateway-dashboard` 模块实现）：
+
+| 接口 URL | 请求方式 | 功能描述 | 数据来源参考 |
+| :--- | :--- | :--- | :--- |
+| `/dashboard/metrics/realtime` | GET | 获取 QPS、延迟、成功率、网络吞吐 | Sentinel API / Actuator / Redis |
+| `/dashboard/metrics/top-routes` | GET | 获取请求量 Top 5 的路由信息 | Redis ZSet (需在过滤器中埋点) |
+| `/dashboard/topology` | GET | 获取服务拓扑结构及健康状态 | **透传 SkyWalking GraphQL** |
+| `/dashboard/logs/block` | GET/WS | 获取最近被拦截的访问日志 | Sentinel BlockHandler / Gateway Filter |
+| `/dashboard/ops/refresh-routes` | POST | 触发路由刷新事件 | Nacos Event |
+| `/dashboard/ops/waf-switch` | POST | 切换黑名单过滤器状态 | Nacos Config / Redis |
+
+---
+
+### 💡 SkyWalking 拓扑图的实现建议
+
+既然你想把 SkyWalking 放中间，我建议你走 **“后端代理数据 + 前端 ECharts 渲染”** 的路子，这样能完美融合你的赛博朋克风格。
+
+**具体步骤：**
+1.  你的网关后端需要集成 SkyWalking 的 GraphQL 客户端。
+2.  调用 SW 的 `getServiceTopology` 接口。
+3.  拿到 JSON 数据：`nodes` (服务节点) 和 `calls` (调用关系)。
+4.  前端用 ECharts 的 `graph` 类型渲染，把背景设透明，节点设为发光的圆点，线设为荧光色。
+
+**如果你觉得开发成本太高，想先凑合用：**
+可以使用 `iframe` 嵌入 SkyWalking 页面，然后用 CSS 的 `filter: invert(1) hue-rotate(180deg);` 把它强行变成暗色模式（虽然效果可能有点怪，但快）。
+
+### ✅ 总结
+
+现在的设计已经非常扎实了：
+1.  **左边看负载**（我知道网关累不累）。
+2.  **中间看链路**（我知道流量去哪了，SkyWalking 数据驱动）。
+3.  **右边看拦截**（我知道谁被拒之门外了）。
+4.  **操作有实义**（刷新路由、开关 WAF）。
+
+这个大屏不仅能放在简历里吹牛，在实际生产环境中也是真的能帮运维人员快速定位问题的。
